# cloud-services-notifications

./: AUTHORS  COPYING  INSTALL  MANIFEST.in  Makefile  Makefile.am  README  TODO  account.py  autogen.sh  cloudsn  cloudsn-local  cloudsn-local.sh  cloudsn-preferences-local.sh  cloudsn-window-local.sh  cloudsn.sh  config.py  configure.ac  gmailatom.py  gmailprovider.py  greaderatom.py  index.html  main.py  setup.py
arch/: PKGBUILD  release.txt
cloudsn/: Makefile.am  account.py  cloudsn  config.py  controller.py  facebookprovider.py  globals.py.in  gmailprovider.py  greaderatom.py  greaderprovider.py  main.py  pop3provider.py  preferences.py  provider.py
cloudsn/core/: Makefile.am  account.py  config.py  controller.py  provider.py  utils.py
cloudsn/providers/: Makefile.am  gmailprovider.py  greaderprovider.py  pop3provider.py
cloudsn/ui/: Makefile.am  preferences.py
data/: Makefile.am  cloudsn  cloudsn.desktop  cloudsn.desktop.in  cloudsn.desktop.in.in.in  gmail-account.ui  greader-account.ui  imap-account.ui  pop3-account.ui  pop3.ui  preferences.ui  twitter-account.ui  twitter.ui
debian/: changelog  cloudsnpackaging.txt  control  copyright
doc/: cloudsnpackaging.txt
po/: POTFILES  POTFILES.in  POTFILES.skip  cloudsn.pot  es.po  eu.po  genpot.sh  it.po  ja.po  updatetrans.sh
src/cloudsn/: __init__.py  cloudsn.py  const.py
src/cloudsn/core/: account.py  config.py  controller.py  indicator.py  keyring.py  networkmanager.py  notification.py  provider.py  sound.py  utils.py
src/cloudsn/core/keyrings/: base64keyring.py  gkeyring.py  gnomekeyring.py  plainkeyring.py
src/cloudsn/providers/: facebookprovider.py  feedsprovider.py  gmailprovider.py  greaderprovider.py  identicaprovider.py  imapprovider.py  oauth.py  pop3provider.py  providersbase.py  test-facebook.sh  test-imap.sh  twitter.py  twitterprovider.py
src/cloudsn/providers/facebook/: __init__.py
src/cloudsn/providers/tweepy/: __init__.py  api.py  auth.py  binder.py  cursor.py  models.py  parsers.py  streaming.py
src/cloudsn/ui/: about.py  authwarning.py  preferences.py  utils.py  window.py
src/cloudsn/ui/indicators/: indicatorapplet.py  statusicon.py
tests/: greader.py  identica2.py  images.py  indicator.py  notifications.py  poptest.py  test-twitter.sh  testcsv.py  tumblr.py  twitteroauth.py
